# medication-price-chatbot

./: .gitignore  LICENSE  README.md  package.json  start-servers.sh
backend/: __init__.py  cache.py  env.example  errors.py  main.py  pyproject.toml  rate_limit.py  requirements.txt  run-backend.zsh  tavily_mcp.py
backend/docs/: mcp_tools.md
backend/examples/: advanced_scenarios.py  advanced_usage.py  mcp_client.py  test_mcp.py
backend/tests/: test_cache_rate_limit.py  test_errors.py
frontend/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/mcp/tools/compare_prices/: route.ts
frontend/src/app/api/mcp/tools/find_generic_alternatives/: route.ts
frontend/src/app/api/mcp/tools/find_pharmacies/: route.ts
frontend/src/app/api/mcp/tools/get_medication_info/: route.ts
frontend/src/app/api/mcp/tools/search_medication_price/: route.ts
frontend/src/components/: ChatMessage.tsx  McpChatbot.tsx  McpToolTester.tsx  PriceCard.tsx  TavilySearch.tsx  TypingIndicator.tsx
